chg: [various] Fix password, ready for 1st test run

--- a/preseeds/preseed.cfg
+++ b/preseeds/preseed.cfg
@@ -4,8 +4,8 @@ d-i base-installer/kernel/override-image string linux-server
 # Account setup
 d-i passwd/user-fullname string ail
 d-i passwd/username string ail
-d-i passwd/user-password password Password1234
-d-i passwd/user-password-again password Password1234
+d-i passwd/user-password password ail
+d-i passwd/user-password-again password ail
 d-i user-setup/encrypt-home boolean false
 d-i user-setup/allow-password-weak boolean true
 
@@ -66,7 +66,7 @@ d-i mirror/http/proxy string
 # Allowed values: none, safe-upgrade, full-upgrade
 d-i pkgsel/upgrade select safe-upgrade
 
-# Go grub, go!
+# grub
 d-i grub-installer/only_debian boolean true
 
 d-i finish-install/reboot_in_progress note
